plugins {
    id 'java'
}

group = 'com.pshakhlovich'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation('com.fasterxml.jackson.core:jackson-databind:2.16.0')

    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

test {
    jvmArgs '--enable-preview'
    useJUnitPlatform()
}